 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplie dbackdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.
10. Remove link to user guide, its out of date.
11. Adjust volume with arrow keys, if control has focus.

4.0.1
-----
 1. Fix highlighting jumplist letter when jumping/scrolling lists.
 2. Re-add placing song info into window title.
 3. Move screensaver text every 5 minutes.
 4. Increase now-playing cover menu button opacity.
 5. Revert to previous String.replaceAll polyfill, fixes rendering issues.
 6. Fix text position when using thick mobile now-playing bar on iOS.
 7. Fix 'undefined' appearing in 'Artist' MAI section.
 8. Remember active MAI tab.
 9. Fix landscape now-playing ratings position.
10. Fix ratings display logic in desktop now-playing bar.
11. Fix issues where TrackStat is installed but RatingsLight is not.
12. Respect setting to not draw queue background.
13. Fix playing 'Various Artist' albums.
14. Don't request genre when searching.
15. Don't request artist_ids when searching on mobile, as don't create links.

4.0.0
-----
 1. Unify MAI layout between desktop and mobile.
 2. Allow mobile MAI to use 3 column layout.
 3. Force MAI tabs if layout too narrow.
 4. Add option to show a now-playing bar at the bottom of browse and queue
    views in mobile layout.
 5. Slightly increase background image blur.
 6. Show track and album names in relevant MAI section.
 7. Remove "Artist", "Album", and "Track" headers from expanded MAI sections.
 8. Show now-playing bar progress even for radio.
 9. Make more subtitle items clickable in search results for non-touch devices.
10. Support LMS8.4 release_type.
11. When listing artist albums separate out normal and compilation albums.
12. Reduce number of JSONRPC calls at start-up.
13. Fix long-press on power button / player icon not updating its assignment